services.yaml
# Backend Service (ClusterIP for internal communication)
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: event-management
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP

---
# Frontend Service (ClusterIP for Ingress routing)
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: event-management
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8501
      targetPort: 8501
  type: LoadBalancer

# MongoDB Service ()
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: event-management
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
  type: ClusterIP
