ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-management-ingress
  namespace: event-management
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: event-management.kiii
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8501
